feat: add new BP detectable models
* docs: add BP_ZAN model

* chore: add BP_ZAN model

* chore: add detectable object type
BP_CLIMAT_RESILIENCE

* chore: add detectable object type
BP_CONFORMITE_PLU

* chore: add detectable object type
BP_CONFORMITE_PLU

* chore: add detectable object type
BP_TROTTOIRS

* chore: add detectable object type
BP_OLD
