# src/main/java/app/bpartners/geojobs/repository/model/detection/DetectableType.java
@@ -8,5 +8,15 @@ public enum DetectableType {
   ARBRE,
   TROTTOIR,
   LINE,
-  ESPACE_VERT
+  ESPACE_VERT,
+  VOIE_CARROSSABLE,
+  PARKING,
+  MOISISSURE,
+  USURE,
+  FISSURE_CASSURE,
+  OBSTACLE,
+  CHEMINEE,
+  HUMIDITE,
+  RISQUE_FEU,
+  VELUX
 }
